include/livesplit_core.h

struct SharedTimer_s;
typedef struct SharedTimer_s *restrict SharedTimer;
typedef struct SharedTimer_s *restrict SharedTimerRefMut;
typedef struct SharedTimer_s const* SharedTimerRef;
struct Timer_s;
typedef struct Timer_s *restrict Timer;
typedef struct Timer_s *restrict TimerRefMut;
typedef struct Timer_s const* TimerRef;
struct TimerReadLock_s;
typedef struct TimerReadLock_s *restrict TimerReadLock;
typedef struct TimerReadLock_s *restrict TimerReadLockRefMut;
typedef struct TimerReadLock_s const* TimerReadLockRef;
struct TimerWriteLock_s;
typedef struct TimerWriteLock_s *restrict TimerWriteLock;
typedef struct TimerWriteLock_s *restrict TimerWriteLockRefMut;
typedef struct TimerWriteLock_s const* TimerWriteLockRef;
/**
Frees the object, allowing it to clean up all of its memory. You need
to call this for every object that you don't use anymore and hasn't
already been freed.
*/
void SharedTimer_drop(SharedTimer self);
/**
Creates a new shared timer handle that shares the same timer. The inner
timer object only gets disposed when the final handle gets disposed.
*/
SharedTimer SharedTimer_share(SharedTimerRef self);
/**
Requests read access to the timer that is being shared. This blocks the
thread as long as there is an active write lock. Dispose the read lock when
you are done using the timer.
*/
TimerReadLock SharedTimer_read(SharedTimerRef self);
/**
Requests write access to the timer that is being shared. This blocks the
thread as long as there are active write or read locks. Dispose the write
lock when you are done using the timer.
*/
TimerWriteLock SharedTimer_write(SharedTimerRef self);
/**
Replaces the timer that is being shared by the timer provided. This blocks
the thread as long as there are active write or read locks. Everyone who is
sharing the old timer will share the provided timer after successful
completion.
*/
void SharedTimer_replace_inner(SharedTimerRef self, Timer timer);
/**
Frees the object, allowing it to clean up all of its memory. You need
to call this for every object that you don't use anymore and hasn't
already been freed.
*/
void TimerReadLock_drop(TimerReadLock self);
/**
Accesses the timer.
*/
TimerRef TimerReadLock_timer(TimerReadLockRef self);
/**
Frees the object, allowing it to clean up all of its memory. You need
to call this for every object that you don't use anymore and hasn't
already been freed.
*/
void TimerWriteLock_drop(TimerWriteLock self);
/**
Accesses the timer.
*/
TimerRefMut TimerWriteLock_timer(TimerWriteLockRefMut self);